--- a/InventorySystemForiPhone/Resource/Localizable.strings
+++ b/InventorySystemForiPhone/Resource/Localizable.strings
@@ -17,3 +17,4 @@ ISMainPageViewController = "主页";
 ISQueryOrderViewController = "查询单据";
 ISSaleOrderViewController = "销售抄单";
 ISReturnOrderViewController = "退货抄单";
+ISRemainTimeViewController = "使用期限";
