--- a/InventorySystemForiPhone/Resource/Localizable.strings
+++ b/InventorySystemForiPhone/Resource/Localizable.strings
@@ -18,3 +18,4 @@ ISQueryOrderViewController = "查询单据";
 ISSaleOrderViewController = "销售抄单";
 ISReturnOrderViewController = "退货抄单";
 ISRemainTimeViewController = "使用期限";
+ISDataSyncViewController = "数据同步";
