--- a/InventorySystemForiPhone/Resource/Localizable.strings
+++ b/InventorySystemForiPhone/Resource/Localizable.strings
@@ -21,3 +21,5 @@ ISRemainTimeViewController = "使用期限";
 ISDataSyncViewController = "数据同步";
 ISAddProductViewController = "添加商品";
 ISScanViewController = "扫码";
+ISSettingViewController = "设置";
+ISLoginAddressViewController = "设置连接地址";
